[package]
name = "smartvaults-sdk"
version.workspace = true
edition = "2021"
description = "Smart Vaults SDK"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[features]
default = []
blocking = ["async-utility/blocking", "nostr-sdk/blocking"]

[dependencies]
async-utility = "0.1"
bdk_electrum = { git = "https://github.com/bitcoindevkit/bdk", rev = "2e4bc3c5e27814c7981fd520265a9b907cdec2fb" }
smartvaults-core = { path = "../smartvaults-core", features = ["reserves"] }
smartvaults-protocol = { path = "../smartvaults-protocol" }
smartvaults-sdk-sqlite = { path = "../smartvaults-sdk-sqlite" }
futures = "0.3"
futures-util = "0.3"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "63961eedbbc315e94134da2c61cd98e17ae0a7b6", default-features = false, features = ["nip04", "nip06", "nip46"] }
parking_lot = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"
