[package]
name = "smartvaults-sdk"
version.workspace = true
edition = "2021"
description = "Smart Vaults SDK"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[features]
default = []
blocking = ["async-utility/blocking", "nostr-sdk/blocking"]

[dependencies]
async-utility = "0.1"
bdk_electrum = { git = "https://github.com/bitcoindevkit/bdk", rev = "3fdab87ee7c02439b18a9e114ff588b282525402" }
smartvaults-core = { path = "../smartvaults-core", features = ["reserves"] }
smartvaults-protocol = { path = "../smartvaults-protocol" }
smartvaults-sdk-sqlite = { path = "../smartvaults-sdk-sqlite" }
futures = "0.3"
futures-util = "0.3"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "ac0704fe0ff6ff76425b166851b5002c3d71b24e", default-features = false, features = ["nip04", "nip06", "nip46", "sqlite"] }
parking_lot = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"
