[package]
name = "smartvaults-sdk"
version.workspace = true
edition = "2021"
description = "Smart Vaults SDK"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[features]
default = []
blocking = ["nostr-sdk/blocking"]

[dependencies]
async-utility.workspace = true
bdk_electrum = { git = "https://github.com/yukibtc/bdk", rev = "285ff46a49fe53e1f7996b83335442e2febcdeae" }
smartvaults-core = { path = "../smartvaults-core", features = ["reserves"] }
smartvaults-protocol = { path = "../smartvaults-protocol" }
smartvaults-sdk-sqlite = { path = "../smartvaults-sdk-sqlite" }
futures = "0.3"
futures-util = "0.3"
nostr-sdk = { workspace = true, features = ["nip04", "nip06", "nip46", "sqlite"] }
parking_lot = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"
